--- a/Ejercicios_Parte_Practica.ipynb
+++ b/Ejercicios_Parte_Practica.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,13 @@
     "import seaborn as sns\n",
     "from scipy.linalg import eigh,eig,eigvals\n",
     "from scipy.optimize import linprog\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from copy import deepcopy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +45,7 @@
        "        [0, 1, 0]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +68,7 @@
        "       [ 0., -1.,  1.]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -169,26 +170,20 @@
       " [ 0  0  0 -1  0 -1 -1]] \n",
       "b_eq demand-supply vector: [ 1  0  0  0  0 -1] \n",
       "Bounds of each X arc variable: ((0, None), (0, None), (0, None), (0, None), (0, None), (0, None), (0, None)) \n",
-      "\n"
+      "\n",
+      "## Results ##\n",
+      "The raw solution will be: [1.00000000e+00 1.07463814e-10 1.00000000e+00 4.87243456e-11\n",
+      " 1.07463814e-10 1.00000000e+00 1.07463814e-10]\n",
+      "The arcs that make the shortest path will be (from, to): [(0, 1), (1, 3), (3, 5)]\n",
+      "The minimum cost will be: 5.00 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-10-a71d07f4f0ae>:22: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "<ipython-input-5-a71d07f4f0ae>:22: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
       "  res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "## Results ##\n",
-      "The raw solution will be: [1.00000000e+00 1.07463814e-10 1.00000000e+00 4.87243456e-11\n",
-      " 1.07463814e-10 1.00000000e+00 1.07463814e-10]\n",
-      "The arcs that make the shortest path will be (from, to): [(0, 1), (1, 3), (3, 5)]\n",
-      "The minimum cost will be: 5.00 \n"
      ]
     }
    ],
@@ -226,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +239,7 @@
        "       1.07463814e-10, 1.00000000e+00, 1.07463814e-10])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,8 +249,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Shortest Path\n",
+    "# EX2: Basic example SP"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -279,6 +282,11 @@
       "The raw solution will be: [5.29117485e-01 4.70882515e-01 5.29117485e-01 1.92890873e-11\n",
       " 4.70882515e-01 5.29117485e-01 4.70882515e-01]\n",
       "The arcs that make the shortest path will be (from, to): []\n",
+      "The minimum cost will be: 5.00 \n",
+      "\n",
+      " ## Results for revised simplex ## \n",
+      "The raw solution will be: [0. 1. 0. 0. 1. 0. 1.]\n",
+      "The arcs that make the shortest path will be (from, to): [(0, 2), (2, 4), (4, 5)]\n",
       "The minimum cost will be: 5.00 \n"
      ]
     },
@@ -286,19 +294,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-18-c862b3d8662c>:23: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "<ipython-input-7-c862b3d8662c>:23: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
       "  res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method=name_method)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " ## Results for revised simplex ## \n",
-      "The raw solution will be: [0. 1. 0. 0. 1. 0. 1.]\n",
-      "The arcs that make the shortest path will be (from, to): [(0, 2), (2, 4), (4, 5)]\n",
-      "The minimum cost will be: 5.00 \n"
      ]
     }
    ],
@@ -334,6 +331,128 @@
     "    print('The raw solution will be: %s' % res.x)\n",
     "    print('The arcs that make the shortest path will be (from, to): %s' % selarcs)\n",
     "    print('The minimum cost will be: %0.2f ' % res.fun)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Shortest Path\n",
+    "# EX3 Basic example SP with Dijkstra algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph = {'s': {'2': 2, '3': 2},\n",
+    "         \n",
+    "         '2': {'4': 2, 't': 5,'s':2}, '3': {'5': 2,'s':2},\n",
+    "         \n",
+    "         '4': {'t': 1,'2':2}, '5': {'t': 2,'3':2},'t':{'4':1,'5':2,'2':5} }\n",
+    "\n",
+    "costs = {'s': 0, '2': np.inf, '3': np.inf, '4': np.inf, '5': np.inf, 't': np.inf}\n",
+    "\n",
+    "parents = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# graph = {'s': {'1': 2, '2': 2},\n",
+    "#          '1': {'3': 2, 't': 5,'s':2}, '2': {'4': 2,'s':2},\n",
+    "#          '3': {'t': 1,'1':2}, '4': {'t': 2,'2':2},'t':{'3':1,'4':2,'1':5} }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def search(source, target, graph, costs, parents):\n",
+    "    \n",
+    "    new_graph=deepcopy(graph)\n",
+    "    new_cost=deepcopy(costs)\n",
+    "    \n",
+    "    nextNode = source\n",
+    "    \n",
+    "    while nextNode != target:\n",
+    "        \n",
+    "        for neighbor in new_graph[nextNode]:\n",
+    "            \n",
+    "            if new_graph[nextNode][neighbor] + new_cost[nextNode] < new_cost[neighbor]:\n",
+    "                \n",
+    "                new_cost[neighbor] = new_graph[nextNode][neighbor] + new_cost[nextNode]\n",
+    "                \n",
+    "                parents[neighbor] = nextNode\n",
+    "   \n",
+    "            del new_graph[neighbor][nextNode]\n",
+    "        del new_cost[nextNode]\n",
+    "        \n",
+    "        res =  [key for key in new_cost if \n",
+    "        all(new_cost[temp] >= new_cost[key] \n",
+    "        for temp in new_cost)] \n",
+    "        \n",
+    "#         nextNode = max(new_cost, key=costs.get)\n",
+    "\n",
+    "        nextNode=res[0]      \n",
+    "    return parents\n",
+    "\n",
+    "\n",
+    "def backpedal(source, target, searchResult,graph):\n",
+    "    \n",
+    "    node = target\n",
+    "    \n",
+    "    backpath = [target]\n",
+    "    \n",
+    "    path = []\n",
+    "    \n",
+    "    while node != source:\n",
+    "        \n",
+    "        backpath.append(searchResult[node])\n",
+    "        \n",
+    "        node = searchResult[node]\n",
+    "        \n",
+    "    for i in range(len(backpath)):\n",
+    "        \n",
+    "        path.append(backpath[-i - 1])\n",
+    "    \n",
+    "    costo_total=0\n",
+    "    for i in range (len(path)-1):\n",
+    "        costo_total+=graph[path[i]][path[i+1]]\n",
+    "\n",
+    "    return path,costo_total\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shorth path=['s', '2', '4', 't']\n",
+      "total cost = 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = search('s', 't', graph, costs, parents)\n",
+    "\n",
+    "# print('parent dictionary={}'.format(result))\n",
+    "print('shorth path={}'.format(backpedal('s', 't', result,graph)[0]))\n",
+    "print('total cost = {}'.format(backpedal('s', 't', result,graph)[1]))"
    ]
   },
   {
