--- a/Ejercicios_Parte_Practica.ipynb
+++ b/Ejercicios_Parte_Practica.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "        [0, 1, 0]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "       [ 0., -1.,  1.]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,16 +130,7 @@
     "        if np.isclose(i, 1, rtol=1e-05, atol=1e-08, equal_nan=False): # Vecinity\n",
     "            arc.append(arc_idxs[idx])\n",
     "    return arc\n",
-    "\n",
-    "# Maximum flow Utils\n",
-    "def get_usage_string(arc_idxs, res_flow, capacity):\n",
-    "    return {arc: '%s/%s' % (flow, cap) for arc, flow, cap in zip(arc_idxs, res_flow, capacity)}\n",
-    "\n",
-    "def get_min_cut(arc_idxs, np_res_flow, np_capacity):\n",
-    "    np_capacity = np.where(np_capacity == None, 999, np_capacity)\n",
-    "\n",
-    "    idxs = np.argwhere((np_res_flow - np_capacity) == 0)\n",
-    "    return [arc_idxs[i[0]] for i in idxs]"
+    "\n"
    ]
   },
   {
@@ -152,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +173,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-5-a71d07f4f0ae>:22: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "<ipython-input-50-a71d07f4f0ae>:22: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
       "  res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds)\n"
      ]
     }
@@ -221,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +230,7 @@
        "       1.07463814e-10, 1.00000000e+00, 1.07463814e-10])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +285,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-7-c862b3d8662c>:23: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "<ipython-input-52-c862b3d8662c>:23: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
       "  res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method=name_method)\n"
      ]
     }
@@ -343,24 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph = {'s': {'2': 2, '3': 2},\n",
-    "         \n",
-    "         '2': {'4': 2, 't': 5,'s':2}, '3': {'5': 2,'s':2},\n",
-    "         \n",
-    "         '4': {'t': 1,'2':2}, '5': {'t': 2,'3':2},'t':{'4':1,'5':2,'2':5} }\n",
-    "\n",
-    "costs = {'s': 0, '2': np.inf, '3': np.inf, '4': np.inf, '5': np.inf, 't': np.inf}\n",
-    "\n",
-    "parents = {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,12 +374,9 @@
     "        res =  [key for key in new_cost if \n",
     "        all(new_cost[temp] >= new_cost[key] \n",
     "        for temp in new_cost)] \n",
-    "        \n",
-    "#         nextNode = max(new_cost, key=costs.get)\n",
     "\n",
     "        nextNode=res[0]      \n",
     "    return parents\n",
-    "\n",
     "\n",
     "def backpedal(source, target, searchResult,graph):\n",
     "    \n",
@@ -429,21 +400,44 @@
     "    for i in range (len(path)-1):\n",
     "        costo_total+=graph[path[i]][path[i+1]]\n",
     "\n",
-    "    return path,costo_total\n",
-    "\n"
+    "    return path,costo_total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph = {'s': {'2': 2, '3': 2},\n",
+    "         \n",
+    "         '2': {'4': 2, 't': 5,'s':2}, \n",
+    "         \n",
+    "         '3': {'5': 2,'s':2},\n",
+    "         \n",
+    "         '4': {'t': 1,'2':2},\n",
+    "         \n",
+    "         '5': {'t': 2,'3':2},\n",
+    "         \n",
+    "         't':{'4':1,'5':2,'2':5} }\n",
+    "\n",
+    "\n",
+    "costs = {'s': 0, '2': np.inf, '3': np.inf, '4': np.inf, '5': np.inf, 't': np.inf}\n",
+    "\n",
+    "parents = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shorth path=['s', '2', '4', 't']\n",
-      "total cost = 5\n"
+      "shorth_path=['s', '2', '4', 't']\n",
+      "total_cost = 5\n"
      ]
     }
    ],
@@ -451,9 +445,294 @@
     "result = search('s', 't', graph, costs, parents)\n",
     "\n",
     "# print('parent dictionary={}'.format(result))\n",
-    "print('shorth path={}'.format(backpedal('s', 't', result,graph)[0]))\n",
-    "print('total cost = {}'.format(backpedal('s', 't', result,graph)[1]))"
+    "print('shorth_path={}'.format(backpedal('s', 't', result,graph)[0]))\n",
+    "print('total_cost = {}'.format(backpedal('s', 't', result,graph)[1]))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Maximum Flow\n",
+    "# EX4: Basic example MF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Maximum flow Utils\n",
+    "def get_usage_string(arc_idxs, res_flow, capacity):\n",
+    "    return {arc: '%s/%s' % (flow, cap) for arc, flow, cap in zip(arc_idxs, res_flow, capacity)}\n",
+    "\n",
+    "def get_min_cut(arc_idxs, np_res_flow, np_capacity):\n",
+    "    np_capacity = np.where(np_capacity == None, 999, np_capacity)\n",
+    "\n",
+    "    idxs = np.argwhere((np_res_flow - np_capacity) == 0)\n",
+    "    return [arc_idxs[i[0]] for i in idxs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "## Optimizer inputs ## \n",
+      "Cost vector: [ 0  0  0  0  0  0  0 -1] \n",
+      " A_eq Node-Arc matrix:\n",
+      "[[ 1  1  0  0  0  0  0 -1]\n",
+      " [-1  0  1  1  0  0  0  0]\n",
+      " [ 0 -1  0  0  1  0  0  0]\n",
+      " [ 0  0 -1  0  0  1  0  0]\n",
+      " [ 0  0  0  0 -1  0  1  0]\n",
+      " [ 0  0  0 -1  0 -1 -1  1]] \n",
+      "b_eq demand-supply vector: [0 0 0 0 0 0] \n",
+      "Bounds of each X arc variable: ((0, 7), (0, 1), (0, 2), (0, 3), (0, 2), (0, 1), (0, 2), (0, None)) \n",
+      "\n",
+      "## Results ## \n",
+      "The usage of each arc will be (from, to): {(0, 1): '4/7', (0, 2): '1/1', (1, 3): '1/2', (1, 5): '3/3', (2, 4): '1/2', (3, 5): '1/1', (4, 5): '1/2', (5, 0): '5/None'} \n",
+      "The arcs that produce the minimum cut (from, to): [(0, 2), (1, 5), (3, 5)] \n",
+      "The maximum flow will be: 5.00 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-64-430887b527b4>:23: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "  res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method='simplex')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# IMPORT THE DATA:\n",
+    "NN = np.array([[0, 1, 1, 0, 0, 0],\n",
+    "               [0, 0, 0, 1, 0, 1],\n",
+    "               [0, 0, 0, 0, 1, 0],\n",
+    "               [0, 0, 0, 0, 0, 1],\n",
+    "               [0, 0, 0, 0, 0, 1],\n",
+    "               [1, 0, 0, 0, 0, 0]])\n",
+    "\n",
+    "# DATA MANIPULATION:\n",
+    "Aeq, arc_idxs = nn2na(NN)\n",
+    "C = np.array([0, 0, 0, 0, 0, 0, 0, -1])\n",
+    "beq = np.array([0, 0, 0, 0, 0, 0])\n",
+    "max_q = [7, 1, 2, 3, 2, 1, 2, None]\n",
+    "bounds = tuple([(0, max_q[arcs]) for arcs in range(0, Aeq.shape[1])])\n",
+    "\n",
+    "print('## Optimizer inputs ## \\n'\n",
+    "      'Cost vector: %s \\n '\n",
+    "      'A_eq Node-Arc matrix:\\n%s \\n'\n",
+    "      'b_eq demand-supply vector: %s \\n'\n",
+    "      'Bounds of each X arc variable: %s \\n' % (C, Aeq, beq, bounds))\n",
+    "\n",
+    "# OPTIMIZE:\n",
+    "res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method='simplex')\n",
+    "\n",
+    "# GET THE SOLUTION:\n",
+    "usage = get_usage_string(arc_idxs, res.x.astype(int), max_q)\n",
+    "min_cut = get_min_cut(arc_idxs, res.x, np.array(max_q))\n",
+    "max_flow = res.fun * -1\n",
+    "print('## Results ## \\n'\n",
+    "      'The usage of each arc will be (from, to): %s \\n'\n",
+    "      'The arcs that produce the minimum cut (from, to): %s \\n'\n",
+    "      'The maximum flow will be: %0.2f ' % (usage, min_cut , max_flow))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((0, 7), (0, 1), (0, 2), (0, 3), (0, 2), (0, 1), (0, 2), (0, None))"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4., 1., 1., 3., 1., 1., 1., 5.])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Maximum Flow\n",
+    "# EX5: Basic example MF with Ford Fulkerson algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transport\n",
+    "# EX6: Transport model example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "## Optimizer inputs ## \n",
+      "Cost vector: [10 20 10 10 10 30] \n",
+      " A_eq Node-Arc matrix:\n",
+      "[[ 1  1  0  0  0  0]\n",
+      " [ 0  0  1  1  0  0]\n",
+      " [ 0  0  0  0  1  1]\n",
+      " [-1  0 -1  0 -1  0]\n",
+      " [ 0 -1  0 -1  0 -1]] \n",
+      "b_eq demand-supply vector: [ 10  20  15 -25 -20] \n",
+      "Bounds of each X arc variable: ((0, None), (0, None), (0, None), (0, None), (0, None), (0, None)) \n",
+      "\n",
+      "## Results ## \n",
+      "The maximum flow will be: -450.00 \n",
+      "The raw solution will be: [10.  0.  0. 20. 15.  0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-102-8848cbfb17c1>:22: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "  res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method='simplex')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# IMPORT THE DATA:\n",
+    "NN = np.array([[ 0, 0, 0, 1, 1],\n",
+    "               [0, 0, 0, 1, 1],\n",
+    "               [0, 0, 0, 1, 1],\n",
+    "               [0, 0, 0, 0, 0],\n",
+    "               [0, 0, 0, 0, 0]])\n",
+    "\n",
+    "# DATA MANIPULATION:\n",
+    "Aeq, arc_idxs = nn2na(NN)\n",
+    "C = np.array([10, 20, 10, 10, 10, 30])\n",
+    "beq = np.array([10, 20, 15, -25, -20])\n",
+    "               \n",
+    "bounds = tuple([(0, None) for arcs in range(0, Aeq.shape[1])])\n",
+    "\n",
+    "print('## Optimizer inputs ## \\n'\n",
+    "      'Cost vector: %s \\n '\n",
+    "      'A_eq Node-Arc matrix:\\n%s \\n'\n",
+    "      'b_eq demand-supply vector: %s \\n'\n",
+    "      'Bounds of each X arc variable: %s \\n' % (C, Aeq, beq, bounds))\n",
+    "\n",
+    "# OPTIMIZE:\n",
+    "res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method='simplex')\n",
+    "\n",
+    "\n",
+    "\n",
+    "max_flow = res.fun * -1\n",
+    "print('## Results ## \\n'\n",
+    "      'The maximum flow will be: %0.2f ' % ( max_flow))\n",
+    "\n",
+    "\n",
+    "# GET THE SOLUTION:\n",
+    "selarcs = get_selected_arcs(arc_idxs, res.x)\n",
+    "# print('\\n ## Results for %s ## ' % name_method)\n",
+    "\n",
+    "print('The raw solution will be: %s' % res.x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     con: array([0., 0., 0., 0., 0.])\n",
+       "     fun: 450.0\n",
+       " message: 'Optimization terminated successfully.'\n",
+       "     nit: 5\n",
+       "   slack: array([], dtype=float64)\n",
+       "  status: 0\n",
+       " success: True\n",
+       "       x: array([10.,  0.,  0., 20., 15.,  0.])"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10.,  0.,  0., 20., 15.,  0.])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
