--- a/Ejercicios_Parte_Practica.ipynb
+++ b/Ejercicios_Parte_Practica.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "        [0, 1, 0]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "       [ 0., -1.,  1.]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-50-a71d07f4f0ae>:22: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "<ipython-input-5-a71d07f4f0ae>:22: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
       "  res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds)\n"
      ]
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "       1.07463814e-10, 1.00000000e+00, 1.07463814e-10])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-52-c862b3d8662c>:23: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "<ipython-input-7-c862b3d8662c>:23: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
       "  res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method=name_method)\n"
      ]
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-64-430887b527b4>:23: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "<ipython-input-13-430887b527b4>:23: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
       "  res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method='simplex')\n"
      ]
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        "((0, 7), (0, 1), (0, 2), (0, 3), (0, 2), (0, 1), (0, 2), (0, None))"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
        "array([4., 1., 1., 3., 1., 1., 1., 5.])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,10 +595,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Description:\n",
+    "    (1) Start with initial flow as 0;\n",
+    "    (2) Choose augmenting path from source to sink and add path to flow;\n",
+    "\"\"\"\n",
+    " \n",
+    "def BFS(graph, s, t, parent):\n",
+    "    # Return True if there is node that has not iterated.\n",
+    "    visited = [False] * len(graph)\n",
+    "    queue = []\n",
+    "    queue.append(s)\n",
+    "    visited[s] = True\n",
+    " \n",
+    "    while queue:\n",
+    "        u = queue.pop(0)\n",
+    "        for ind in range(len(graph[u])):\n",
+    "            if visited[ind] is False and graph[u][ind] > 0:\n",
+    "                queue.append(ind)\n",
+    "                visited[ind] = True\n",
+    "                parent[ind] = u\n",
+    " \n",
+    "    return True if visited[t] else False\n",
+    "\n",
+    "def FordFulkerson(graph, source, sink):\n",
+    "    \n",
+    "    # This array is filled by BFS and to store path\n",
+    "    \n",
+    "    parent = [-1] * (len(graph))\n",
+    "    max_flow = 0\n",
+    "    while BFS(graph, source, sink, parent):\n",
+    "        path_flow = float(\"Inf\")\n",
+    "        s = sink\n",
+    " \n",
+    "        while s != source:\n",
+    "            # Find the minimum value in select path\n",
+    "            path_flow = min(path_flow, graph[parent[s]][s])\n",
+    "            s = parent[s]\n",
+    " \n",
+    "        max_flow += path_flow\n",
+    "        v = sink\n",
+    " \n",
+    "        while v != source:\n",
+    "            u = parent[v]\n",
+    "            graph[u][v] -= path_flow\n",
+    "            graph[v][u] += path_flow\n",
+    "            v = parent[v]\n",
+    "    return max_flow\n",
+    " \n",
+    " \n",
+    "graph = [\n",
+    "    [0, 7, 1, 0, 0, 0],\n",
+    "    [0, 0, 0, 2, 0, 3],\n",
+    "    [0, 0, 0, 0, 2, 0],\n",
+    "    [0, 0,0 , 0, 0, 1],\n",
+    "    [0, 0, 0, 0, 0, 2],\n",
+    "    [0, 0, 0, 0, 0, 0],]\n",
+    " \n",
+    "source, sink = 0,5\n",
+    "print(FordFulkerson(graph, source, sink))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -610,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +705,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-102-8848cbfb17c1>:22: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "<ipython-input-19-e4bd370de423>:23: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
       "  res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method='simplex')\n"
      ]
     }
@@ -652,6 +720,7 @@
     "\n",
     "# DATA MANIPULATION:\n",
     "Aeq, arc_idxs = nn2na(NN)\n",
+    "\n",
     "C = np.array([10, 20, 10, 10, 10, 30])\n",
     "beq = np.array([10, 20, 15, -25, -20])\n",
     "               \n",
@@ -682,50 +751,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "     con: array([0., 0., 0., 0., 0.])\n",
-       "     fun: 450.0\n",
-       " message: 'Optimization terminated successfully.'\n",
-       "     nit: 5\n",
-       "   slack: array([], dtype=float64)\n",
-       "  status: 0\n",
-       " success: True\n",
-       "       x: array([10.,  0.,  0., 20., 15.,  0.])"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([10.,  0.,  0., 20., 15.,  0.])"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res.x"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
