--- a/Ejercicios_Parte_Practica.ipynb
+++ b/Ejercicios_Parte_Practica.ipynb
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-19-e4bd370de423>:23: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "<ipython-input-17-e4bd370de423>:23: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
       "  res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method='simplex')\n"
      ]
     }
@@ -747,6 +747,209 @@
     "# print('\\n ## Results for %s ## ' % name_method)\n",
     "\n",
     "print('The raw solution will be: %s' % res.x)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dynamic Network Flows\n",
+    "# EX7: Emergency Evacuation Plan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IMPORT THE DATA:\n",
+    "NN = np.array([[0, 1, 1, 0, 0, 0],\n",
+    "               [0, 0, 0, 1, 0, 1],\n",
+    "               [0, 0, 0, 0, 1, 0],\n",
+    "               [0, 0, 0, 0, 0, 1],\n",
+    "               [0, 0, 0, 0, 0, 1],\n",
+    "               [0, 0, 0, 0, 0, 0]])\n",
+    "\n",
+    "# DATA MANIPULATION:\n",
+    "C = np.array([2, 1, 2, 5, 2, 1, 2])\n",
+    "Aeq, arc_idxs = nn2na(NN)\n",
+    "beq = np.array([1, 0, 0, 0, 0, -1])\n",
+    "bounds = tuple([(0, None) for arcs in range(0, Aeq.shape[1])])\n",
+    "\n",
+    "print('## Optimizer inputs ## \\n'\n",
+    "      'Cost vector: %s \\n '\n",
+    "      'A_eq Node-Arc matrix:\\n%s \\n'\n",
+    "      'b_eq demand-supply vector: %s \\n'\n",
+    "      'Bounds of each X arc variable: %s \\n' % (C, Aeq, beq, bounds))\n",
+    "\n",
+    "for name_method in 'interior-point', 'revised simplex':\n",
+    "    # OPTIMIZE:\n",
+    "    res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method=name_method)\n",
+    "\n",
+    "    # GET THE SOLUTION:\n",
+    "    selarcs = get_selected_arcs(arc_idxs, res.x)\n",
+    "    print('\\n ## Results for %s ## ' % name_method)\n",
+    "    print('The raw solution will be: %s' % res.x)\n",
+    "    print('The arcs that make the shortest path will be (from, to): %s' % selarcs)\n",
+    "    print('The minimum cost will be: %0.2f ' % res.fun)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IMPORT THE DATA:\n",
+    "\n",
+    "NN = np.array([\n",
+    "    [0,     1, 1, 1, 1, 1, 1,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0],\n",
+    "    \n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 1, 0, 0, 0, 0,   0, 0, 0, 1, 0, 0,   0, 0, 0, 0, 0, 0,   0],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 1, 0, 0, 0,   0, 0, 0, 0, 1, 0,   0, 0, 0, 0, 0, 0,   0],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 1, 0, 0,   0, 0, 0, 0, 0, 1,   0, 0, 0, 0, 0, 0,   0],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 1, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 1,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0],\n",
+    "    \n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 1, 0, 0, 0,   0, 1, 0, 0, 0, 0,   0],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 1, 0, 0,   0, 0, 1, 0, 0, 0,   0],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 1, 0,   0, 0, 0, 1, 0, 0,   0],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 1,   0, 0, 0, 0, 1, 0,   0],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 1,   0],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0],\n",
+    "    \n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 1, 0, 0, 0, 0,   0],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 1, 0, 0, 0,   0],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 1, 0, 0,   0],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 1, 0,   0],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 1,   0],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0],\n",
+    "    \n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   1],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   1],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   1],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   1],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   1],\n",
+    "    [0,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   1],\n",
+    "    \n",
+    "    [1,     0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0, 0, 0, 0, 0, 0,   0],\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "## Results ## \n",
+      "The usage of each arc will be (from, to): {(0, 1): '8/inf', (0, 2): '6/inf', (0, 3): '3/inf', (0, 4): '3/inf', (0, 5): '0/inf', (0, 6): '0/inf', (1, 8): '5/5', (1, 16): '3/5', (2, 9): '3/5', (2, 17): '3/5', (3, 10): '3/5', (3, 18): '0/10', (4, 11): '3/10', (5, 12): '0/10', (7, 15): '0/6', (7, 20): '0/6', (8, 16): '0/6', (8, 21): '5/6', (9, 17): '0/3', (9, 22): '3/3', (10, 18): '0/3', (10, 23): '3/3', (11, 24): '3/3', (13, 20): '0/3', (14, 21): '0/3', (15, 22): '0/3', (16, 23): '3/3', (17, 24): '3/3', (19, 25): '0/inf', (20, 25): '0/inf', (21, 25): '5/inf', (22, 25): '3/inf', (23, 25): '6/inf', (24, 25): '6/inf', (25, 0): '20/inf'} \n",
+      "The arcs that produce the minimum cut (from, to): [(1, 8), (9, 22), (10, 23), (11, 24), (16, 23), (17, 24)] \n",
+      "\n",
+      "\n",
+      "The maximum flow will be: 20.00 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-46-165ea678ce8b>:26: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "  res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method='simplex')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DATA MANIPULATION:\n",
+    "Aeq, arc_idxs = nn2na(NN)\n",
+    "\n",
+    "C = np.zeros((1,Aeq.shape[1]))\n",
+    "C[0,Aeq.shape[1]-1]=-1\n",
+    "\n",
+    "beq = np.zeros((1,Aeq.shape[0]))\n",
+    "\n",
+    "max_q = [np.inf, np.inf , np.inf, np.inf, np.inf,np.inf,\n",
+    "         5,5,5,5,5,\n",
+    "         10,10,10,\n",
+    "         6,6,6,6,\n",
+    "         3,3,3,3,3,\n",
+    "         3,3,3,3,3,\n",
+    "         np.inf, np.inf , np.inf, np.inf, np.inf,np.inf,\\\n",
+    "         np.inf]\n",
+    "\n",
+    "bounds = tuple([(0, max_q[arcs]) for arcs in range(0, Aeq.shape[1])])\n",
+    "\n",
+    "# print('## Optimizer inputs ## \\n'\n",
+    "#       'Cost vector: %s \\n '\n",
+    "#       'A_eq Node-Arc matrix:\\n%s \\n'\n",
+    "#       'b_eq demand-supply vector: %s \\n'\n",
+    "#       'Bounds of each X arc variable: %s \\n' % (C, Aeq, beq, bounds))\n",
+    "\n",
+    "# OPTIMIZE:\n",
+    "res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method='simplex')\n",
+    "\n",
+    "# GET THE SOLUTION:\n",
+    "usage = get_usage_string(arc_idxs, res.x.astype(int), max_q)\n",
+    "min_cut = get_min_cut(arc_idxs, res.x, np.array(max_q))\n",
+    "max_flow = res.fun * -1\n",
+    "print('## Results ## \\n'\n",
+    "      'The usage of each arc will be (from, to): %s \\n'\n",
+    "      'The arcs that produce the minimum cut (from, to): %s \\n'\n",
+    "      \"\\n\"\n",
+    "      \"\\n\"\n",
+    "      'The maximum flow will be: %0.2f ' % (usage, min_cut , max_flow))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "## Results ## \n",
+      "\n",
+      "\n",
+      "The maximum flow will be: 20.00 \n",
+      "## Results ## \n",
+      "\n",
+      "\n",
+      "The maximum flow will be: 20.00 \n",
+      "## Results ## \n",
+      "\n",
+      "\n",
+      "The maximum flow will be: 20.00 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-48-7d41a63c720c>:3: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "  res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method=name_method)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name_method in 'interior-point', 'revised simplex', 'simplex':\n",
+    "    # OPTIMIZE:\n",
+    "    res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method=name_method)\n",
+    "\n",
+    "    # GET THE SOLUTION:\n",
+    "    usage = get_usage_string(arc_idxs, res.x.astype(int), max_q)\n",
+    "    min_cut = get_min_cut(arc_idxs, res.x, np.array(max_q))\n",
+    "    max_flow = res.fun * -1\n",
+    "    print('## Results ## \\n'\n",
+    "          \"\\n\"\n",
+    "          \"\\n\"\n",
+    "          'The maximum flow will be: %0.2f ' % (max_flow))\n"
    ]
   },
   {
