--- a/Ejercicios_Parte_Practica.ipynb
+++ b/Ejercicios_Parte_Practica.ipynb
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-46-165ea678ce8b>:26: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "<ipython-input-19-005bef43978a>:27: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
       "  res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method='simplex')\n"
      ]
     }
@@ -869,24 +869,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "## Results ## \n",
       "\n",
-      "\n",
+      " ## Results for interior-point ## \n",
       "The maximum flow will be: 20.00 \n",
-      "## Results ## \n",
       "\n",
-      "\n",
+      " ## Results for revised simplex ## \n",
       "The maximum flow will be: 20.00 \n",
-      "## Results ## \n",
       "\n",
-      "\n",
+      " ## Results for simplex ## \n",
       "The maximum flow will be: 20.00 \n"
      ]
     },
@@ -894,7 +891,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-48-7d41a63c720c>:3: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "<ipython-input-25-e8d66ebf81b2>:3: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
       "  res = linprog(C, A_eq=Aeq, b_eq=beq, bounds=bounds, method=name_method)\n"
      ]
     }
@@ -908,25 +905,292 @@
     "    usage = get_usage_string(arc_idxs, res.x.astype(int), max_q)\n",
     "    min_cut = get_min_cut(arc_idxs, res.x, np.array(max_q))\n",
     "    max_flow = res.fun * -1\n",
-    "    print('## Results ## \\n'\n",
-    "          \"\\n\"\n",
-    "          \"\\n\"\n",
-    "          'The maximum flow will be: %0.2f ' % (max_flow))\n"
+    "    print('\\n ## Results for %s ## ' % name_method)\n",
+    "    print('The maximum flow will be: %0.2f ' % (max_flow))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(bounds)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(26, 35)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Aeq.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transshipment problem\n",
+    "# EX8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## La matriz esta estructurada de esta forma \n",
+    "\n",
+    "##  P1A P1B P2A P2B P3A P3B     S1A S1B  S2A S2B  S3A S3B       V1A V1B  V2A V2B  V3A V3B \n",
+    "\n",
+    "\n",
+    "NN_A = np.array([\n",
+    "\n",
+    "    [     0, 0, 0, 0, 0, 0,         1, 0, 1, 0,                  0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,         0, 1, 0, 1,                  0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,         1, 0, 1, 0,                  0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,         0, 1, 0, 1,                  0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,         1, 0, 1, 0,                  0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,         0, 1, 0, 1,                  0, 0, 0, 0, 0, 0,   ],\n",
+    "    \n",
+    "    [     0, 0, 0, 0, 0, 0,         0, 0, 0, 0,                  0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,         0, 0, 0, 0,                  0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,         0, 0, 0, 0,                  0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,         0, 0, 0, 0,                  0, 0, 0, 0, 0, 0,   ],\n",
+    "   \n",
+    "    \n",
+    "    [     0, 0, 0, 0, 0, 0,         0, 0, 0, 0,                  0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,         0, 0, 0, 0,                  0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,         0, 0, 0, 0,                  0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,         0, 0, 0, 0,                  0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,         0, 0, 0, 0,                  0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,         0, 0, 0, 0,                  0, 0, 0, 0, 0, 0,   ], \n",
+    "\n",
+    "\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "## La matriz esta estructurada de esta forma \n",
+    "\n",
+    "##  P1A P1B P2A P2B P3A P3B   S1A S1B  S2A S2B  S3A S3B    V1A V1B  V2A V2B  V3A V3B \n",
+    "\n",
+    "\n",
+    "NN_Aeq = np.array([\n",
+    "\n",
+    "    [     0, 0, 0, 0, 0, 0,       0, 0, 0, 0,               0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,       0, 0, 0, 0,               0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,       0, 0, 0, 0,               0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,       0, 0, 0, 0,               0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,       0, 0, 0, 0,               0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,       0, 0, 0, 0,               0, 0, 0, 0, 0, 0,   ],\n",
+    "    \n",
+    "    [     0, 0, 0, 0, 0, 0,       0, 0, 0, 0,               1, 0, 1, 0, 1, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,       0, 0, 0, 0,               0, 1, 0, 1, 0, 1,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,       0, 0, 0, 0,               1, 0, 1, 0, 1, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,       0, 0, 0, 0,               0, 1, 0, 1, 0, 1,   ],\n",
+    "   \n",
+    "    \n",
+    "    [     0, 0, 0, 0, 0, 0,        0, 0, 0, 0,              0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,        0, 0, 0, 0,              0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,        0, 0, 0, 0,              0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,        0, 0, 0, 0,              0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,        0, 0, 0, 0,              0, 0, 0, 0, 0, 0,   ],\n",
+    "    [     0, 0, 0, 0, 0, 0,        0, 0, 0, 0,              0, 0, 0, 0, 0, 0,   ], \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "## Optimizer inputs ## \n",
+      "Cost vector: [100 100 200 200 150 150 150 150 200 200 100 100] \n",
+      " A Node-Arc matrix:\n",
+      "[[ 1  1  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  1  1  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  1  1  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  1  1  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  1  1  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  1  1]\n",
+      " [-1  0  0  0 -1  0  0  0 -1  0  0  0]\n",
+      " [ 0  0 -1  0  0  0 -1  0  0  0 -1  0]\n",
+      " [ 0 -1  0  0  0 -1  0  0  0 -1  0  0]\n",
+      " [ 0  0  0 -1  0  0  0 -1  0  0  0 -1]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0]] \n",
+      "b_A offert-supply vector: [20 30 10 40 30 10  0  0  0  0  0  0  0  0  0  0] \n",
+      "Bounds of each X arc variable: ((0, None), (0, None), (0, None), (0, None), (0, None), (0, None), (0, None), (0, None), (0, None), (0, None), (0, None), (0, None)) \n",
+      "\n",
+      "## Optimizer inputs ## \n",
+      "Cost vector: [100 100 200 200 150 150 150 150 200 200 100 100] \n",
+      " A_eq Node-Arc matrix:\n",
+      "[[ 0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 1  1  1  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  1  1  1  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  1  1  1  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  0  0  1  1  1]\n",
+      " [-1  0  0  0  0  0 -1  0  0  0  0  0]\n",
+      " [ 0  0  0 -1  0  0  0  0  0 -1  0  0]\n",
+      " [ 0 -1  0  0  0  0  0 -1  0  0  0  0]\n",
+      " [ 0  0  0  0 -1  0  0  0  0  0 -1  0]\n",
+      " [ 0  0 -1  0  0  0  0  0 -1  0  0  0]\n",
+      " [ 0  0  0  0  0 -1  0  0  0  0  0 -1]] \n",
+      "b_eq demand-supply vector: [  0   0   0   0   0   0   0   0   0   0 -30 -40 -10 -20 -20 -20] \n",
+      "Bounds of each X arc variable: ((0, None), (0, None), (0, None), (0, None), (0, None), (0, None), (0, None), (0, None), (0, None), (0, None), (0, None), (0, None)) \n",
+      "\n",
+      "## Results ## \n",
+      "The maximum flow will be: -0.00 \n",
+      "The raw solution will be: [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-91-7f0344d6712d>:36: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "  res = linprog(C,  A_ub=A, b_ub=b_A,   A_eq=Aeq, b_eq=beq    , bounds=bounds, method='simplex')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DATA MANIPULATION:\n",
+    "A, arc_idxs_A = nn2na(NN_A)\n",
+    "\n",
+    "Aeq, arc_idxs = nn2na(NN_Aeq)\n",
+    "\n",
+    "\n",
+    "\n",
+    "C = np.array([100,100,200,200,150,150,150,150,200,200,100,100])\n",
+    "\n",
+    "b_A = np.array([20,30,10,40,30,10,  0,0,0,0,  0,0,0,0,0,0])\n",
+    "\n",
+    "beq = np.array([0,0,0,0,0,0,  0,0,0,0,  -30,-40,-10,-20,-20,-20])\n",
+    "\n",
+    "\n",
+    "               \n",
+    "bounds = tuple([(0, None) for arcs in range(0, Aeq.shape[1])])\n",
+    "\n",
+    "print('## Optimizer inputs ## \\n'\n",
+    "      'Cost vector: %s \\n '\n",
+    "      'A Node-Arc matrix:\\n%s \\n'\n",
+    "      'b_A offert-supply vector: %s \\n'\n",
+    "      'Bounds of each X arc variable: %s \\n' % (C, A, b_A, bounds))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "print('## Optimizer inputs ## \\n'\n",
+    "      'Cost vector: %s \\n '\n",
+    "      'A_eq Node-Arc matrix:\\n%s \\n'\n",
+    "      'b_eq demand-supply vector: %s \\n'\n",
+    "      'Bounds of each X arc variable: %s \\n' % (C, Aeq, beq, bounds))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# OPTIMIZE:\n",
+    "res = linprog(C,  A_ub=A, b_ub=b_A,   A_eq=Aeq, b_eq=beq    , bounds=bounds, method='simplex')\n",
+    "\n",
+    "\n",
+    "\n",
+    "max_flow = res.fun * -1\n",
+    "print('## Results ## \\n'\n",
+    "      'The maximum flow will be: %0.2f ' % ( max_flow))\n",
+    "\n",
+    "\n",
+    "# GET THE SOLUTION:\n",
+    "selarcs = get_selected_arcs(arc_idxs, res.x)\n",
+    "# print('\\n ## Results for %s ## ' % name_method)\n",
+    "\n",
+    "print('The raw solution will be: %s' % res.x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# C = np.array([100,100,200,200,150,150,150,150,200,200,100,100,\n",
+    "              \n",
+    "#               100,100,200,200,150,150,150,150,200,200,100,100])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# C = np.array([100,200,150,150,200,100,100,200,150,150,200,100,])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# C = np.array([100,100,200,200,150,150,150,150,200,200,100,100])\n",
+    "# len(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# res"
+   ]
   },
   {
    "cell_type": "code",
