--- a/Ejercicios_Parte_Practica.ipynb
+++ b/Ejercicios_Parte_Practica.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1160,24 +1160,24 @@
       "\n",
       "## Results ## \n",
       " for_T= 8\n",
-      "The raw solution will be: [0.58014311 0.41985689 0.38014311 0.2        0.41985689 0.38014311\n",
-      " 0.41985689]\n",
+      "The raw solution will be: [0.2 0.8 0.  0.2 0.8 0.  0.8]\n",
       "The arcs that make the shortest path will be (from, to): []\n",
-      "The minimum cost will be: 5.40 \n",
+      "The minimum cost will be: 5.40  \n",
+      "\n",
       "## Results ## \n",
       " for_T= 9\n",
-      "The raw solution will be: [5.06221102e-01 4.93778899e-01 5.06221100e-01 3.33054337e-09\n",
-      " 4.93778899e-01 5.06221100e-01 4.93778899e-01]\n",
-      "The arcs that make the shortest path will be (from, to): []\n",
-      "The minimum cost will be: 5.00 \n"
+      "The raw solution will be: [0. 1. 0. 0. 1. 0. 1.]\n",
+      "The arcs that make the shortest path will be (from, to): [(0, 2), (2, 4), (4, 5)]\n",
+      "The minimum cost will be: 5.00  \n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-67-f37ebb3e5b6c>:31: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
-      "  res = linprog(C,    A_ub=t, b_ub=i  ,  A_eq=Aeq, b_eq=beq, bounds=bounds)\n"
+      "<ipython-input-81-f2965be0fbab>:34: OptimizeWarning: A_eq does not appear to be of full row rank. To improve performance, check the problem formulation for redundant equality constraints.\n",
+      "  res = linprog(C,    A_ub=t, b_ub=i  ,  A_eq=Aeq, b_eq=beq, bounds=bounds,method=\"simplex\")\n"
      ]
     }
    ],
@@ -1203,6 +1203,7 @@
     "T=[8,9]\n",
     "\n",
     "bounds = tuple([(0, None) for arcs in range(0, Aeq.shape[1])])\n",
+    "\n",
     "print('## Optimizer inputs ## \\n'\n",
     "      'Cost vector: %s \\n '\n",
     "      'A_eq Node-Arc matrix:\\n%s \\n'\n",
@@ -1211,16 +1212,20 @@
     "\n",
     "\n",
     "for i in T:\n",
+    "    \n",
     "    # OPTIMIZE:\n",
-    "    res = linprog(C,    A_ub=t, b_ub=i  ,  A_eq=Aeq, b_eq=beq, bounds=bounds)\n",
+    "    \n",
+    "    res = linprog(C,    A_ub=t, b_ub=i  ,  A_eq=Aeq, b_eq=beq, bounds=bounds,method=\"simplex\")\n",
     "\n",
     "    # GET THE SOLUTION:\n",
     "    selarcs = get_selected_arcs(arc_idxs, res.x)\n",
     "    print('## Results ## \\n '\n",
     "           \"for_T= %s\" % i)\n",
     "    print('The raw solution will be: %s' % res.x)\n",
+    "    \n",
     "    print('The arcs that make the shortest path will be (from, to): %s' % selarcs)\n",
-    "    print('The minimum cost will be: %0.2f ' % res.fun)"
+    "    \n",
+    "    print('The minimum cost will be: %0.2f  \\n' % res.fun)"
    ]
   },
   {
